small button group layout bug

--- a/styles/omni/css/ux.css
+++ b/styles/omni/css/ux.css
@@ -474,7 +474,7 @@
     background-position: left -210px;
 }
 
-.omni-style .button-group .button.small.disabled{
+.omni-style .button-group .button.small.invalid.disabled {
     background-position: left -240px;
 }
 
